--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vue/preload-webpack-plugin": "^2.0.0",
     "bootstrap": "^5.1.3",
     "imagemin-svgo": "^10.0.0",
-    "rucksack-css": "^1.0.2"
+    "rucksack-css": "^1.0.2",
+    "slick-slider": "^1.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
